--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,12 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+[invariant]
+runs = 2000
+depth = 25
+fail_on_revert = false
+call_override = false
+dictionary_weight = 80
+include_storage = true
+include_push_bytes = true
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
